welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:12: error: ':' expected but ')' found.
def in16(day):Boolean = {
            ^alarmClock:30: error: identifier expected but '}' found.
 }
 ^