welcome.lessons.welcome.bat.bool2.AlarmClock.scala.code
def alarmClock(day:Int, vacation:Boolean): String = {
	if (!vacation && in16(day)){
		return "7:00";
	}else{
		return "OFF";
	}
	
}



def in16(day):Boolean = {
	
	if (day == 0 ){
		return false;
	}
	if ( day == 6){
		return false;
	}
	if ( day < 6 && day > 0){
		return true;
		
	}else{
		return false;
	}
	
	
}
